Change to minimum height to avoid wrapping issues with buttons in jumbotron

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -49,7 +49,7 @@ a {
   color: $header-heading-color;
   background-color: $header-bg-color;
   background-image: linear-gradient(360deg, $header-bg-color, $header-bg-color-secondary);
-  height: 400px;
+  min-height: 400px;
   border-top: 1px #343a40 solid;
   border-bottom: 1px #343a40 solid;
 }
